# star3

./: CMakeLists.txt  README.md
Source/: CommonIncludes.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: AnalysisFrame.h  AudioAnalysis.cpp  AudioAnalysis.h  Smoothing.h
Source/engine/: GlitchEngine.cpp  GlitchEngine.h  MotionEngine.cpp  MotionEngine.h  ParameterIDs.h  StarFieldEngine.cpp  StarFieldEngine.h  StarState.h  VisualTimeline.cpp  VisualTimeline.h
Source/render/: GLHelpers.cpp  GLHelpers.h  ShaderSources.h  StarRenderer.cpp  StarRenderer.h
Source/ui/: AdvancedPanel.cpp  AdvancedPanel.h  MainControls.cpp  MainControls.h  Theme.h  ToggleButtonRow.cpp  ToggleButtonRow.h
